--- a/static/coffee_shop/css/base.css
+++ b/static/coffee_shop/css/base.css
@@ -55,7 +55,7 @@ html, body{
 
 #login-nav-button{
     background-color: rgb(248, 187, 5);
-    width: 95px;
+    width: 120px;
     height: 50px;
     border-radius: 7px;
     color: #F1FAEE;
@@ -161,6 +161,10 @@ html, body{
 
     #login-button-name{
         display: none;
+    }
+
+    #login-nav-button{
+        width: 60px;
     }
 
     .cart-login{
