--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     <!-- Footer -->
 
     <footer class="py-3 border-top mt-auto">
-        <p class="text-center text-muted m-0">Portfolio Website made by <a href="https://github.com/velinapeshkur" id="copyright-link">Velina Peshkur</a>, 2022</p>
+        <p class="text-center text-muted m-0">Portfolio Website made by <a href="https://github.com/velinapeshkur/coffee_shop" id="copyright-link">Velina Peshkur</a>, 2022</p>
         <p class="text-center text-muted">Source: <a href="https://uecoffeeroasters.com/" id="copyright-link">uecoffeeroasters.com</a></p>
     </footer>
 
