--- a/shop/templates/shop/order_history.html
+++ b/shop/templates/shop/order_history.html
@@ -39,7 +39,7 @@
 
             {% if not order.complete %}
                 <p class="mt-2 mb-1">Payment status: {{order.get_payment_display}}</p>
-                {% if order.payment == 0 %}
+                {% if order.payment == 'Awaiting payment' %}
                     <a href="{% url 'shop:payment' pk=order.pk %}" class="btn btn-dark" id="payment-button">Pay</a>
                 {% endif %}
             {% endif %}
